variables.RunHalf.scala.error
Compilation error:
RunHalf:3: error: not found: value biscuitn
while (2 * biscuitn != caseOrange + 1) {
           ^